# nexpay

./: .gitignore  README.md  build.mjs  index.html  package-lock.json  package.json  solana-backend.js  tailwind.config.js  vite.config.js
admin_demo_panel/: code.html
app/: package.json
app/constants/: programId.ts
app/idl/: nexpay.json
app/utils/: solana.js  solana.ts
blockchain_ledger_explorer/: code.html
nexpay-frontend/: build_log.txt  package-lock.json  package.json  vite.config.js
nexpay-frontend/src/: main.tsx
nexpay-frontend/src/lib/: nexpay-sdk.ts  (+1 more)
next-pay-wallet/: README.md
next-pay-wallet/app/: package-lock.json  package.json  tailwind.config.ts
next-pay-wallet/program/: Anchor.toml  Cargo.toml
next-pay-wallet/program/src/: lib.rs
next-pay-wallet/scripts/: airdrop.sh  deploy.sh
onboarding_authentication/: code.html
program/: Anchor.toml  Cargo.toml
program/scripts/: deploy.sh  initialize.ts
program/src/: lib.rs
program/tests/: nexpay.ts
receive_money/: code.html
scripts/: deploy.sh
send_money_flow/: code.html
src/: App.jsx  AppWithProviders.jsx  index.css  main.tsx  polyfills.js
src/components/: Layout.jsx  WalletGuard.jsx  ui.jsx
src/contexts/: ToastContext.jsx
src/hooks/: useSolanaWallet.ts  useUsdcBalance.ts
src/idl/: nexpay_program.json
src/lib/: nexpay-sdk.ts  solana.ts
src/screens/: Home.jsx  Notifications.jsx  Onboarding.jsx  Receive.jsx  SendMoney.jsx  Settings.jsx  TransactionDetail.jsx  Wallet.jsx
transaction_details/: code.html
transaction_history/: code.html
wallet_dashboard/: code.html
(+24 files in other folders)
