[package]
name = "nexpay"
version = "0.1.0"
description = "NexPay: Solana Payment Wallet On-Chain Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexpay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.18"
